@@ -424,7 +424,8 @@ AC_CHECK_MEMBERS(m4_normalize([
 	siginfo_t.si_syscall,
 	siginfo_t.si_timerid,
 	siginfo_t.si_overrun,
-	siginfo_t.si_pkey
+	siginfo_t.si_pkey,
+	siginfo_t.si_addr_lsb
 ]),,, [#include <signal.h>])
 
 AC_CHECK_HEADERS(m4_normalize([
